# fuzzysearch

./: .drone.yml  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  sqlx-data.json
.github/workflows/: release.yml
fuzzysearch/: Cargo.toml  Dockerfile  sqlx-data.json
fuzzysearch-api/: Cargo.toml  Dockerfile  sqlx-data.json
fuzzysearch-api/queries/: handle_twitter.sql  lookup_api_key.sql  lookup_furaffinity_file_id.sql  lookup_hashes.sql  update_rate_limit.sql
fuzzysearch-api/src/: handlers.rs  main.rs  models.rs  utils.rs
fuzzysearch-api/src/api/: auth.rs  mod.rs
fuzzysearch-common/: Cargo.toml
fuzzysearch-common/src/: download.rs  faktory.rs  lib.rs  trace.rs  types.rs  video.rs
fuzzysearch-hash-input/: Cargo.toml  Dockerfile
fuzzysearch-hash-input/src/: main.rs
fuzzysearch-image/: Cargo.toml
fuzzysearch-image/src/: main.rs
fuzzysearch-ingest-e621/: .drone.yml  Cargo.toml  Dockerfile
fuzzysearch-ingest-e621/src/: main.rs
fuzzysearch-ingest-furaffinity/: Cargo.toml  Dockerfile  notes.md
fuzzysearch-ingest-furaffinity/src/: main.rs
fuzzysearch-ingest-weasyl/: .drone.yml  Cargo.toml  Dockerfile  sqlx-data.json
fuzzysearch-ingest-weasyl/src/: main.rs
fuzzysearch-refresh/: Cargo.toml  Dockerfile  sqlx-data.json
fuzzysearch-refresh/src/: main.rs
fuzzysearch-webhook/: Cargo.toml  Dockerfile
fuzzysearch-webhook/src/: main.rs
fuzzysearch/src/: filters.rs  handlers.rs  main.rs  models.rs  types.rs  utils.rs
migrations/: 20201009171601_initial-weasyl-table.sql  20210221024406_bktree_index.down.sql  20210221024406_bktree_index.up.sql  20210221025236_furaffinity.down.sql  20210221025236_furaffinity.up.sql  20210221025652_e621.down.sql  20210221025652_e621.up.sql  20210221025835_weasyl.down.sql  20210221025835_weasyl.up.sql  20210221030022_twitter.down.sql  20210221030022_twitter.up.sql  20210221030823_hashes.down.sql  20210221030823_hashes.up.sql  20210221033051_authentication.down.sql  20210221033051_authentication.up.sql  20210301032646_webhooks.down.sql  20210301032646_webhooks.up.sql  20210419174900_index_all_hashes.down.sql  20210419174900_index_all_hashes.up.sql  20210419202830_remove_old_index.down.sql  20210419202830_remove_old_index.up.sql  20210420024815_webhooks.down.sql  20210420024815_webhooks.up.sql  20210422224815_change_hash_index.down.sql  20210422224815_change_hash_index.up.sql  20210822052026_isnumeric_function.down.sql  20210822052026_isnumeric_function.up.sql  20210822052313_deleted_flag.down.sql  20210822052313_deleted_flag.up.sql  20220519161030_index_tag_post_id.down.sql  20220519161030_index_tag_post_id.up.sql
src/: filters.rs  handlers.rs  main.rs  models.rs  types.rs  utils.rs  video.rs
tests/: sample.sql  video.webm
