[package]
name = "e621-watcher"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["thread-pool"] }
hamming = "0.1.3"

serde = "1"
serde_json = "1"

tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
bb8 = "0.7"
bb8-postgres = "0.7"

image = "0.23"
img_hash = "3"

[profile.dev.package."*"]
opt-level = 2
