[workspace]
members = [
    "fuzzysearch-common",

    "fuzzysearch",
    "fuzzysearch-image",
    "fuzzysearch-webhook",

    "fuzzysearch-ingest-e621",
    "fuzzysearch-ingest-furaffinity",
    "fuzzysearch-ingest-weasyl",
]

[profile.dev.package."*"]
opt-level = 2
debug = true

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
