[workspace]
members = [
    "fuzzysearch-common",

    "fuzzysearch",
    "fuzzysearch-hash-input",
    "fuzzysearch-refresh",
    "fuzzysearch-webhook",

    "fuzzysearch-ingest-e621",
    "fuzzysearch-ingest-furaffinity",
    "fuzzysearch-ingest-weasyl",
]

[profile.dev.package."*"]
opt-level = 2
debug = true
