[package]
name = "fuzzysearch-api"
version = "0.2.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
tracing-log = "0.1"

prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1"

opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["tokio"] }
tracing-opentelemetry = "0.17"
opentelemetry-http = "0.6"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

futures = "0.3"

chrono = "0.4"
bytes = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

warp = "0.3"
reqwest = { version = "0.11", features = ["multipart"] }
hyper = "0.14"

sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "macros", "json", "offline", "chrono"] }

image = "0.23"
img_hash = "3"
hamming = "0.1"

bkapi-client = { git = "https://github.com/Syfaro/bkapi.git" }

fuzzysearch-common = { path = "../fuzzysearch-common" }
