[package]
name = "fuzzysearch-common"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[features]
default = ["trace"]

video = ["ffmpeg-next", "tempfile"]
queue = ["faktory", "tokio", "serde_json"]
trace = ["opentelemetry", "opentelemetry-jaeger", "tracing-opentelemetry", "hyper", "prometheus"]

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.2"

serde = { version = "1", features = ["derive"] }
base64 = "0.13"

image = "0.23"
img_hash = "3"

ffmpeg-next = { version = "4", optional = true }
tempfile = { version = "3", optional = true }

faktory = { version = "0.11", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
serde_json = { version = "1", optional = true }

opentelemetry = { version = "0.13.0", features = ["rt-tokio"], optional = true }
opentelemetry-jaeger = { version = "0.12", features = ["tokio"], optional = true }
tracing-opentelemetry = { version = "0.12", optional = true }
hyper = { version = "0.14", optional = true }
prometheus = { version = "0.12", optional = true }
