[package]
name = "fuzzysearch-hash-input"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
tracing = "0.1"
anyhow = "1"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

tempfile = "3"
image = "0.23"

actix-web = "4"
actix-http = "3"
actix-multipart = "0.4"
tracing-actix-web = { version = "0.5", features = ["opentelemetry_0_17"] }

lazy_static = "1"
prometheus = { version = "0.13", features = ["process"] }

fuzzysearch-common = { path = "../fuzzysearch-common" }
