[package]
name = "e621-watcher"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }

hyper = { version = "0.14", features = ["server"] }
reqwest = { version = "0.11", features = ["json"] }

serde = "1"
serde_json = "1"

sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "macros", "json", "offline"] }

image = "0.23"
hamming = "0.1.3"
img_hash = "3"
sha2 = "0.9"

tracing = "0.1"
tracing-subscriber = "0.2"

anyhow = "1"

lazy_static = "1"
prometheus = { version = "0.11", features = ["process"] }
