[package]
name = "fuzzysearch-ingest-e621"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }

hyper = { version = "0.14", features = ["server"] }
reqwest = { version = "0.11", features = ["json"] }

serde = "1"
serde_json = "1"

sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "macros", "json", "offline"] }

image = "0.23"
img_hash = "3"
sha2 = "0.9"

tracing = "0.1"
tracing-unwrap = "0.9"

anyhow = "1"

lazy_static = "1"
prometheus = { version = "0.12", features = ["process"] }

fuzzysearch-common = { path = "../fuzzysearch-common", features = ["queue"] }
