[package]
name = "fuzzysearch-ingest-furaffinity"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
reqwest = "0.11"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.0" }
r2d2_postgres = " 0.18.0"
r2d2 = "0.8"
chrono = "0.4"
hyper = { version = "0.14", features = ["server"] }
prometheus = { version = "0.11", features = ["process"] }
lazy_static = "1"

[dependencies.furaffinity-rs]
git = "https://github.com/Syfaro/furaffinity-rs"
features = ["cloudflare-bypass"]
