[package]
name = "fuzzysearch-ingest-furaffinity"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.0", features = ["with-chrono-0_4"] }
chrono = "0.4"
hyper = { version = "0.14", features = ["server"] }
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1"
futures-retry = "0.6"
tracing = "0.1"
tracing-unwrap = "0.9"
faktory = "0.11"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fuzzysearch-common = { path = "../fuzzysearch-common", features = ["queue"] }
furaffinity-rs = { git = "https://github.com/Syfaro/furaffinity-rs" }
