[package]
name = "fuzzysearch-ingest-weasyl"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
anyhow = "1"

tracing = "0.1"
tracing-subscriber = "0.2"

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

serde = "1"
serde_json = "1"

image = "0.23"
img_hash = "3"

sha2 = "0.9"

fuzzysearch-common = { path = "../fuzzysearch-common", features = ["queue"] }

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["runtime-tokio-native-tls", "macros", "postgres", "json", "offline"]
