[package]
name = "fuzzysearch"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

opentelemetry = "0.6"
opentelemetry-jaeger = "0.5"
tracing-opentelemetry = "0.5"

tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

anyhow = "1"
chrono = "0.4"
bytes = "0.5"
infer = { version = "0.3", default-features = false }

serde = { version = "1", features = ["derive"] }
warp = "0.2"

tokio-postgres = "0.5"
bb8 = "0.4"
bb8-postgres = "0.4"

image = "0.23"
ffmpeg-next = "4"

img_hash = "3"
hamming = "0.1"

bk-tree = "0.3"

fuzzysearch-common = { path = "../fuzzysearch-common" }
