[package]
name = "fuzzysearch"
version = "0.2.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

prometheus = { version = "0.11", features = ["process"] }
lazy_static = "1"

opentelemetry = "0.6"
opentelemetry-jaeger = "0.5"
tracing-opentelemetry = "0.5"

tokio = { version = "1", features = ["full"] }
async-stream = "0.3"

futures = "0.3"

chrono = "0.4"
bytes = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

warp = "0.3"
reqwest = "0.11"
hyper = "0.14"

sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "macros", "json", "offline"] }

infer = { version = "0.3", default-features = false }
ffmpeg-next = "4"
image = "0.23"
img_hash = "3"
hamming = "0.1"

bk-tree = "0.3"

fuzzysearch-common = { path = "../fuzzysearch-common" }
